--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,4 @@ services:
     volumes:
       - ./src:/workspace
     working_dir: /workspace
-    command: yarn run dev
+    command: /bin/sh -c "yarn install && yarn dev"
