--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     ports:
       - 9000:3000
     volumes:
-      - ./src:/workspace
+      - .:/workspace
     working_dir: /workspace
     command: /bin/sh -c "yarn install && yarn dev"
