--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,13 @@
     "esModuleInterop": true,
     "allowJs": true,
     "sourceMap": true,
+    "skipLibCheck": true,
     "strict": true,
+    "strictPropertyInitialization": false,
     "noEmit": true,
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "resolveJsonModule": true,
     "baseUrl": ".",
     "paths": {
       "~/*": [
@@ -25,8 +29,8 @@
     },
     "types": [
       "@nuxt/types",
-      "@nuxtjs/axios",
-      "@types/node"
+      "@types/node",
+      "@nuxtjs/axios"
     ]
   },
   "exclude": [
@@ -35,3 +39,4 @@
     "dist"
   ]
 }
+
