--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
     "express": "^4.18.2",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "vuetify": "^2.6.13"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.7",
