--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
     "express": "^4.18.2",
-    "nuxt": "^2.15.7",
-    "vuetify": "^2.6.13"
+    "nuxt": "^2.15.7"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.7",
-    "@nuxt/typescript-build": "^2.1.0"
+    "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/vuetify": "^1.12.3"
   }
 }
